internetGW.tf
resource "aws_internet_gateway" "example" {
  vpc_id = "vpc-0f2b98b464d200957"
}
