rout-table -association.tf
resource "aws_route_table_association" "example" {
  subnet_id      = "subnet-0b97dfcf58ba3bd01"
  route_table_id = "rtb-0567425f4cabe3366"
}
