public -security-G.tf

resource "aws_security_group" "public-SC" {
  name = "terra-n-gr"
  description = "Allow HTTP and SSH traffic via Terraform"
  vpc_id = "vpc-0f2b98b464d200957"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
